Set button styles and section styles using less

--- a/LESS/main.less
+++ b/LESS/main.less
@@ -1,9 +1,39 @@
 @import "variables";
 
 nav {
-background-color: @yellow-primary;
+  height: 100px;
+  background-color: @yellow-primary;
+  padding-left: 75px !important;
 }
 
 nav a {
-color: @black-secondary;
+  color: @black-secondary;
+}
+
+h2 {
+  color: @black-secondary;
+}
+
+button {
+  background-color: @yellow-primary !important;
+  color: @black-secondary !important;
+  border: 0 !important;
+}
+
+footer {
+  height: 130px;
+  background-color: @black-secondary;
+  border-top: 6px solid @yellow-primary;
+  }
+
+footer img {
+  width: 20%;
+}
+
+.jumbotron img {
+  padding-bottom: 10px;
+}
+
+section {
+  margin: 50px 50px 50px 60px !important;
 }
