--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-nav{background-color:#f8df1f}nav a{color:#080801}
+nav{height:100px;background-color:#f8df1f;padding-left:75px !important}nav a{color:#080801}h2{color:#080801}button{background-color:#f8df1f !important;color:#080801 !important;border:0 !important}footer{height:130px;background-color:#080801;border-top:6px solid #f8df1f}footer img{width:20%}.jumbotron img{padding-bottom:10px}section{margin:50px 50px 50px 60px !important}
