--- a/LESS/main.less
+++ b/LESS/main.less
@@ -62,10 +62,15 @@ footer img {
   padding-bottom: 10px;
 }
 
-section {
-  margin: 50px 50px 50px 60px !important;
-}
-
 #red {
   color: @red-primary !important;
+}
+
+section {
+  margin: 50px 0px 0px 50px;
+  padding: 50px;
+}
+
+.takeout {
+  background-color: @gray-secondary !important;
 }
