Add media queries

--- a/LESS/main.less
+++ b/LESS/main.less
@@ -72,5 +72,18 @@ section {
 }
 
 .takeout {
-  background-color: @gray-secondary !important;
+  background-color: @gray-secondary!important;
+}
+
+// MEDIA QUERIES
+
+@media (max-width: 768px) {
+  img {
+    width: 70% !important;
+    padding: 30px !important;
+  }
+
+  footer {
+    height: 100%;
+  }
 }
